# TrajectoryDiffusion

./: .gitignore  DiffusionManager.py  Logs.md  README.md  Utils.py  eval_sd.ipynb  eval_trajunet.ipynb  train.ipynb
DataPreprocess/: CMakeLists.txt  README.md  preprocess.cpp  saveTorch.cpp
DataPreprocess/cmake/: FindCUDNN.cmake  cuda.cmake
Dataset/: DataExample.txt  DidiDataset.py  getDatasetStats.ipynb  preprocess.ipynb  viewRawDataset.ipynb  visualize.ipynb
Models/: ModelUtils.py  StableDiffusion.py  StableDiffusionBlocks.py  TrajUNet.py  TrajUNetBlocks.py  VAE.py  VAEBlocks.py
